# ItFox_TPB

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
nginx/: default.conf
src/api_app/: apps.py  schemas.py  urls.py
src/base/: paginations.py  permissions.py
src/comments/: models.py  serializers.py  urls.py  views.py
src/likes/: models.py  serializers.py  urls.py  views.py
src/news/: apps.py  models.py  serializers.py  urls.py  views.py
src/oauth/: serializers.py  urls.py  views.py
src/oauth/services/: auth_backend.py  base_auth.py
src/user_app/: apps.py  managers.py  models.py  serializers.py  urls.py  views.py
