[tool.poetry]
name = "itfox-tpb"
version = "0.1.0"
description = ""
authors = ["NovaCript <glebka.yatsenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.15.1"
pyjwt = "^2.8.0"
drf-yasg = "^1.21.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
