[tool.poetry]
name = "itfox-tpb"
version = "0.1.0"
description = ""
authors = ["NovaCript <glebka.yatsenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.15.1"
pyjwt = "^2.8.0"
drf-yasg = "^1.21.7"
gunicorn = "^21.2.0"
django-cors-headers = "^4.3.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
